@@ -146,6 +146,7 @@
         <file>resources/help/settings/pausewheninactive_setting_help.html</file>
         <file>resources/help/tutorial/DemoSceneModel.flow</file>
         <file>resources/help/tutorial/TutorialScheme.json</file>
+        <file>resources/help/editor/projectsettings/number_soundemitters_help.html</file>
     </qresource>
     <qresource prefix="/qml">
         <file>resources/qml/ProjectCardSelection.qml</file>
