@@ -1,0 +1,55 @@
+<!doctype html>
+<html class="no-js" lang="">
+
+<head>
+  <meta charset="utf-8">
+  <title>Template</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+    h1 {
+      text-align: center;
+    }
+    div.container {
+      min-height: 10em;
+      display: table-cell;
+      margin-left: auto;
+      margin-right: auto;
+      width: 0.6em
+    }
+    table.warning {
+      color: black;
+      background-color: #cccc44;
+      border-color: yellow;
+      border-style: solid;
+    }
+  </style>
+</head>
+
+
+<body>
+  <h1>Target Engine Version</h1>
+
+  <hr>
+
+  <div class="container">
+    <p>Lets you configure the number of <a href="qrc:/resources/help/editor/resources/resource_help.html">Sound Resources</a>
+    that can be played simultaniously by calling the respective <a href="qrc:/resources/help/editor/code/script_reference_help.html">Play Commands</a>.<br>
+    The default setting is 5 and should suffice for most <a href="qrc:/resources/help/project/joi_project_help.html">Projects</a>.
+    </p>
+  </div>
+
+  <br>
+
+  <div class="container">
+    <table width="100%" class="warning">
+      <tr>
+        <td width="10%"><img src="qrc:/resources/help/icons/WarningIcon.png" width="64" height="64" alt="Warning"></td>
+        <td width="90%"><br>This setting has a potentially high memory impact.</td>
+      </tr>
+    </table>
+  </div>
+</body>
+
+</html>
