@@ -26,6 +26,7 @@ namespace
   const QString c_sRenameProjectHelpId =    "Editor/RenameProject";
   const QString c_sProjectVersionHelpId =   "Editor/ProjectVersion";
   const QString c_sEngineVersionHelpId =    "Editor/EngineVersion";
+  const QString c_sSoundEmitterCountHelpId ="Editor/SoundEmitterCount";
   const QString c_sProjectDescribtionHelpId="Editor/ProjectDescribtion";
   const QString c_sFetishListHelpId =       "Editor/FetishList";
   const QString c_sAddFetishHelpId =        "Editor/AddFetish";
@@ -73,6 +74,8 @@ void CEditorProjectSettingsWidget::Initialize()
     wpHelpFactory->RegisterHelp(c_sProjectVersionHelpId, ":/resources/help/editor/projectsettings/projectversion_help.html");
     m_spUi->pEngineVersionContainer->setProperty(helpOverlay::c_sHelpPagePropertyName, c_sEngineVersionHelpId);
     wpHelpFactory->RegisterHelp(c_sEngineVersionHelpId, ":/resources/help/editor/projectsettings/engineversion_help.html");
+    m_spUi->pSoundEmitterCount->setProperty(helpOverlay::c_sHelpPagePropertyName, c_sSoundEmitterCountHelpId);
+    wpHelpFactory->RegisterHelp(c_sSoundEmitterCountHelpId, ":/resources/help/editor/projectsettings/number_soundemitters_help.html");
     m_spUi->pDescribtionTextEdit->setProperty(helpOverlay::c_sHelpPagePropertyName, c_sProjectDescribtionHelpId);
     wpHelpFactory->RegisterHelp(c_sProjectDescribtionHelpId, ":/resources/help/editor/projectsettings/describtion_textedit_help.html");
     m_spUi->pFetishListWidget->setProperty(helpOverlay::c_sHelpPagePropertyName, c_sFetishListHelpId);
@@ -154,6 +157,8 @@ void CEditorProjectSettingsWidget::LoadProject(tspProject spProject)
     m_spUi->pProjectMinorVersion->blockSignals(false);
     m_spUi->pProjectPatchVersion->blockSignals(false);
 
+    m_spUi->pSoundEmitterCount->setValue(m_spCurrentProject->m_iNumberOfSoundEmitters);
+
     m_spUi->pDescribtionTextEdit->setPlainText(m_spCurrentProject->m_sDescribtion);
     m_spUi->pDescribtionTextEdit->setReadOnly(bReadOnly);
 
@@ -224,6 +229,8 @@ void CEditorProjectSettingsWidget::SaveProject()
                                                   static_cast<quint32>(m_spUi->pEnginePatchVersion->value()));
   m_spUi->WarningIcon->setVisible(false);
 
+  m_spCurrentProject->m_iNumberOfSoundEmitters = m_spUi->pSoundEmitterCount->value();
+
   m_spCurrentProject->m_sDescribtion = m_spUi->pDescribtionTextEdit->toPlainText();
 
   m_spCurrentProject->m_vsKinks.clear();
@@ -271,6 +278,16 @@ void CEditorProjectSettingsWidget::on_pProjectMinorVersion_valueChanged(qint32 i
 //----------------------------------------------------------------------------------------
 //
 void CEditorProjectSettingsWidget::on_pProjectPatchVersion_valueChanged(qint32 iValue)
+{
+  WIDGET_INITIALIZED_GUARD
+  if (nullptr == m_spCurrentProject) { return; }
+  Q_UNUSED(iValue)
+  emit SignalProjectEdited();
+}
+
+//----------------------------------------------------------------------------------------
+//
+void CEditorProjectSettingsWidget::on_pSoundEmitterCount_valueChanged(qint32 iValue)
 {
   WIDGET_INITIALIZED_GUARD
   if (nullptr == m_spCurrentProject) { return; }
