@@ -35,6 +35,7 @@ protected slots:
   void on_pProjectMajorVersion_valueChanged(qint32 iValue);
   void on_pProjectMinorVersion_valueChanged(qint32 iValue);
   void on_pProjectPatchVersion_valueChanged(qint32 iValue);
+  void on_pSoundEmitterCount_valueChanged(qint32 iValue);
   void on_pDescribtionTextEdit_textChanged();
   void on_pFetishLineEdit_editingFinished();
   void on_FetishOverlayButton_clicked();
